# Notra

./: .gitignore  Cargo.toml  LICENSE  README.md  trellis.hjson
.github/workflows/: release.yml
crates/notra-app/: Cargo.toml  build.rs  tauri.conf.json
crates/notra-app/capabilities/: default.json
crates/notra-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/notra-app/frontend/scripts/: verify-keybindings.mjs  verify-mermaid-layout.mjs
crates/notra-app/frontend/src/: keybindings.ts  main.ts  markdownEditor.ts  sqlFormatterWorker.ts  styles.css  vite-env.d.ts
crates/notra-app/icons/: icon.icns
crates/notra-app/src/: app.rs  main.rs  session.rs  session_store.rs  shell_integration.rs
crates/notra-core/: Cargo.toml
crates/notra-core/examples/: perf_smoke.rs
crates/notra-core/src/: document.rs  fs.rs  lib.rs  search.rs
design-system/notra/: MASTER.md
design-system/notra/pages/: editor.md
docs/: 00-product.md  01-ui-prototype.md  02-architecture.md  03-editor-core.md  04-search-replace.md  05-performance.md  lifecycle.md  product-principles.md  progress.md
docs/prototypes/: notra-iced-editor.html
scripts/: generate-latest-json.mjs  generate-latest-json.test.mjs  release-assets.mjs  release-assets.test.mjs  sync-marktext-muya.ps1
scripts/trellis/: check.ps1  phase.ps1
