[workspace]
members = [
    "crates/notra-core",
    "crates/notra-app",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/syscryer/Notra"

[workspace.dependencies]
notra-core = { path = "crates/notra-core" }
tauri = "2"
tauri-build = "2"
tauri-plugin-window-state = "2.4.1"
rfd = "0.17.2"
encoding_rs = "0.8.35"
regex = "1.12.4"
walkdir = "2.5.0"
memmap2 = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tauri-plugin-single-instance = "2.4.3"
winreg = "0.55.0"
