[package]
name = "notra-app"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "notra"
path = "src/main.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
notra-core.workspace = true
tauri = { workspace = true, features = ["protocol-asset"] }
rfd.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-window-state.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-updater.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true

[build-dependencies]
tauri-build.workspace = true
